# KlemmUITemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  KlemmUITemplate.cpp  KlemmUITemplate.h  README.md
src/: main.cpp
src/ui/: MainElement.hpp
ui/: main.kui
